[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/New Piskel-20.png.png" type="Texture" id=1]
[ext_resource path="res://Assets/archer fix-29.png.png" type="Texture" id=2]
[ext_resource path="res://Assets/New Piskel-22.png.png" type="Texture" id=3]
[ext_resource path="res://Assets/New Piskel-23.png.png" type="Texture" id=4]
[ext_resource path="res://Assets/archer fix28.png.png" type="Texture" id=5]
[ext_resource path="res://Assets/New Piskel-24.png.png" type="Texture" id=6]
[ext_resource path="res://Assets/New Piskel-25.png.png" type="Texture" id=7]
[ext_resource path="res://Assets/archer fix23.png.png" type="Texture" id=8]
[ext_resource path="res://Assets/archer fix-18.png.png" type="Texture" id=9]
[ext_resource path="res://Components/MovementManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://Archer.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "Shooting",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 22.0

[sub_resource type="CircleShape2D" id=3]
radius = 301.007

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 158, 10 )

[node name="Archer" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 15, 4.9 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Arrow_spawn" type="Position2D" parent="."]
position = Vector2( 55, 0 )

[node name="Fire_Rate_Timer" type="Timer" parent="."]
one_shot = true

[node name="sense" type="Area2D" parent="."]
scale = Vector2( 0.996781, 1 )
collision_layer = 0
collision_mask = 2

[node name="sensor" type="CollisionShape2D" parent="sense"]
shape = SubResource( 3 )

[node name="line_of_fire" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="line_of_fire"]
position = Vector2( 148, 0 )
shape = SubResource( 4 )

[node name="MovementManager" parent="." instance=ExtResource( 10 )]
position = Vector2( 9.53674e-07, 0 )
scale = Vector2( 1, 1 )

[connection signal="shooting_completed" from="." to="." method="_on_Archer_shooting_completed"]
[connection signal="timeout" from="Fire_Rate_Timer" to="." method="_on_Fire_Rate_Timer_timeout"]
[connection signal="body_entered" from="sense" to="." method="_on_sense_body_entered"]
[connection signal="body_exited" from="sense" to="." method="_on_sense_body_exited"]
[connection signal="body_entered" from="line_of_fire" to="." method="_on_line_of_fire_body_entered"]
[connection signal="body_exited" from="line_of_fire" to="." method="_on_line_of_fire_body_exited"]
